# wsl-rtx5xxx

./: .gitignore  README.md  gpu_sync.py  pyproject.toml  setup.sh  verify_pytorch.py
